# LoLAnalytics

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_mysql_schema.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  styles.css
loltimecheck/: __init__.py  analysis.py  worker.py
loltimecheck/core/: config.py  constants.py
loltimecheck/integrations/: riot.py  webhook.py
loltimecheck/services/: collection.py  jobs.py  monitoring.py  settings.py  stats.py
loltimecheck/storage/: models.py  repository.py  session.py
loltimecheck/web/: __init__.py  app.py  auth.py  schemas.py
tests/: test_analysis.py  test_db.py  test_monitoring.py  test_settings_and_logs.py  test_web_api.py
