[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lolanalytics"
version = "0.1.0"
description = "Analyze JP League of Legends Flex Challenger play-time patterns."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.17",
  "fastapi>=0.136",
  "PyJWT>=2.10",
  "PyMySQL>=1.1",
  "python-multipart>=0.0.20",
  "SQLAlchemy>=2.0",
  "uvicorn>=0.49",
  "tzdata>=2025.2; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.28"]

[tool.setuptools.packages.find]
include = ["loltimecheck*"]
